[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/TTF/CantedComic Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Petonque_lvl2_diag2.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Fonts-Button-actionJ.tres" type="DynamicFont" id=3]
[ext_resource path="res://Arts/sj_frame.png" type="Texture" id=4]
[ext_resource path="res://Arts/Timmy2-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Arts/Project pétanque _robot_  (1).png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="RichTextLabel_Pedro1" type="RichTextLabel" parent="."]
modulate = Color( 0.882353, 0.670588, 0.670588, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 405.0
margin_top = 90.0
margin_right = 780.0
margin_bottom = 240.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[right]
At last, you are the champion of this world ?

 I imagined you… better headressed !
[/right]"
visible_characters = 0
percent_visible = 0.0
text = "
At last, you are the champion of this world ?

 I imagined you… better headressed !
"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel_Timmy" type="RichTextLabel" parent="."]
modulate = Color( 0.670588, 0.729412, 0.882353, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 227.0
margin_top = 238.0
margin_right = 602.0
margin_bottom = 338.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "We will see if you can, I will make you bite the dust !"
visible_characters = 0
percent_visible = 0.0
text = " I fear not your power, I learned the Pétonque from the Eyes ! 

And I will make you eat your words !"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel_Pedro2" type="RichTextLabel" parent="."]
modulate = Color( 0.882353, 0.670588, 0.670588, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 422.0
margin_top = 305.0
margin_right = 797.0
margin_bottom = 429.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[right]
The future of Earth is on !
[/right]"
visible_characters = 0
percent_visible = 0.0
text = "
The future of Earth is on !
"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Back" type="Button" parent="."]
margin_left = 855.0
margin_top = 545.0
margin_right = 1018.0
margin_bottom = 594.0
custom_fonts/font = ExtResource( 3 )
text = "Play !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait_Player1" type="ColorRect" parent="."]
margin_left = 24.0
margin_top = 168.0
margin_right = 220.0
margin_bottom = 355.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.764706, 0.803922, 0.827451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteTimmy" type="Sprite" parent="Portrait_Player1"]
position = Vector2( 83.7937, 81.6679 )
scale = Vector2( 4.96041, 4.96041 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 60, 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="left_frame" type="Sprite" parent="Portrait_Player1"]
position = Vector2( 96.0696, 101.347 )
scale = Vector2( 6.79, 6.97516 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 33, 1, 30, 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Portrait_Player2" type="ColorRect" parent="."]
margin_left = 824.0
margin_top = 170.0
margin_right = 1004.0
margin_bottom = 363.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.827451, 0.764706, 0.764706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Project pétanque _robot_" type="Sprite" parent="Portrait_Player2"]
position = Vector2( 90.1481, 92.7407 )
scale = Vector2( 2.0363, 2.0363 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 42, 69, 81, 85 )
__meta__ = {
"_edit_lock_": true
}

[node name="right_frame" type="Sprite" parent="Portrait_Player2"]
position = Vector2( 93.58, 96.8497 )
scale = Vector2( 6.42333, 6.42333 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1, 1, 30, 30 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Button_Back" to="." method="_on_Button_Back_pressed"]
